# qyn-core

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  TEST_REPORT.md  genesis.json
consensus/: Cargo.toml
consensus/src/: error.rs  lib.rs  rewards.rs  slashing.rs  validator_set.rs
contracts/: README.md
core/: Cargo.toml
core/src/: block.rs  chain.rs  error.rs  fork.rs  genesis.rs  lib.rs  mempool.rs  state.rs  transaction.rs  types.rs  validation.rs
docs/: EXTERNAL_AUDIT_REPORT.md  SECURITY.md  architecture.md  book.toml
docs/src/: SUMMARY.md  overview.md  run-node.md
network/: Cargo.toml
network/src/: error.rs  lib.rs  protocol.rs  swarm.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs  runner.rs
node/tests/: integration.rs  multi_node.rs  stress_test.rs
quyn-intelligence/: Cargo.toml
quyn-intelligence/src/: concentration_monitor.rs  content_verifier.rs  contract_scanner.rs  fraud_detector.rs  gas_optimiser.rs  lib.rs  liquidity_monitor.rs  models.rs  patterns.rs  reputation_db.rs  risk_scorer.rs  rug_pull_detector.rs  validator_scorer.rs  validator_selection.rs
quyn-intelligence/tests/: gas_optimiser_tests.rs  rug_pull_tests.rs  validator_tests.rs
rpc/: Cargo.toml
rpc/src/: error.rs  lib.rs  server.rs
sdk/js-sdk/: package.json
sdk/js-sdk/src/: client.test.ts  client.ts  index.ts
sdk/py-sdk/: README.md  pyproject.toml
sdk/py-sdk/src/quyn/: __init__.py  client.py
sdk/py-sdk/tests/: test_client.py
tools/: Cargo.toml
tools/src/: deploy.rs  devnet.rs  faucet.rs  lib.rs
vm/: Cargo.toml  README.md
vm/src/: abi.rs  error.rs  executor.rs  lib.rs  state_db_adapter.rs
wallet/: Cargo.toml
wallet/src/: cli.rs  error.rs  hd.rs  keys.rs  lib.rs  signing.rs
