[package]
name = "quyn-consensus"
version.workspace = true
edition.workspace = true
description = "Quyn Proof of Stake consensus: validators, staking, slashing, rewards, delegation"

[dependencies]
quyn-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"
rand = "0.8"
alloy-primitives = "0.7"

[dev-dependencies]
tempfile = "3.10"
