[package]
name = "quyn-core"
version.workspace = true
edition.workspace = true
description = "Quyn blockchain core: blocks, transactions, chain state, mempool, validation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
rlp = "0.5"
rocksdb = "0.22"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
bytes = "1.5"
alloy-primitives = { version = "0.7", features = ["serde"] }
keccak = "0.1"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
