[package]
name = "quyn-network"
version.workspace = true
edition.workspace = true
description = "Quyn P2P networking with libp2p"

[dependencies]
quyn-core = { path = "../core" }
libp2p = { version = "0.53", features = ["tcp", "noise", "kad", "mdns", "identify", "request-response", "tokio", "yamux", "macros"] }
libp2p-swarm = { version = "0.44", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
bytes = "1.5"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
