[package]
name = "quyn-intelligence"
version.workspace = true
edition.workspace = true
description = "QYN Intelligence - AI fraud detection at protocol level"

[dependencies]
quyn-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = { version = "0.7", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
quyn-wallet = { path = "../wallet" }
alloy-primitives = { version = "0.7", features = ["serde"] }
