[package]
name = "quyn-rpc"
version.workspace = true
edition.workspace = true
description = "Quyn JSON-RPC, WebSocket, REST API layer"

[dependencies]
quyn-consensus = { path = "../consensus" }
quyn-core = { path = "../core" }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
alloy-primitives = "0.7"
hex = "0.4"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
