[package]
name = "quyn-tools"
version.workspace = true
edition.workspace = true
description = "Quyn developer tools: deploy CLI, devnet, faucet"

[[bin]]
name = "quyn-deploy"
path = "src/deploy.rs"

[[bin]]
name = "quyn-faucet"
path = "src/faucet.rs"

[[bin]]
name = "quyn-devnet"
path = "src/devnet.rs"

[dependencies]
quyn-core = { path = "../core" }
quyn-wallet = { path = "../wallet" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
