[package]
name = "quyn-vm"
version.workspace = true
edition.workspace = true
description = "Quyn Virtual Machine - EVM compatible execution via revm"

[dependencies]
quyn-core = { path = "../core" }
revm = "8"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
