[package]
name = "quyn-wallet"
version.workspace = true
edition.workspace = true
description = "Quyn HD wallet, keys, signing, CLI"

[dependencies]
quyn-core = { path = "../core" }
bip39 = "2.0"
bip32 = "0.5"
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }
sha2 = "0.10"
keccak = "0.1"
alloy-primitives = { version = "0.7", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
